# runpod-lifecycle

./: .gitignore  README.md  VibeComfy2.md  env.example  pyproject.toml  smoke_live.py
src/runpod_lifecycle/: __init__.py  api.py  cli.py  config.py  discovery.py  errors.py  events.py  guard.py  lifecycle.py  pod.py  prebuilt.py  probe.py  runner.py  shipping.py  ssh.py  storage.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_discovery.py  test_guard.py  test_launch.py  test_live_pod.py  test_pod.py  test_prebuilt.py  test_probe.py  test_runner.py  test_shipping.py  test_ssh_details.py  test_storage.py  test_terminate.py
